[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ResourceCards/ResourceCard.gd" type="Script" id=2]
[ext_resource path="res://GraphNetwork/HustleGraphNode.tscn" type="PackedScene" id=3]

[node name="ResourceCard" type="VBoxContainer"]
margin_right = 170.0
margin_bottom = 75.0
script = ExtResource( 2 )

[node name="ResourceCategoryLabel" type="Label" parent="."]
margin_right = 170.0
margin_bottom = 14.0
text = "Supplier"
align = 1

[node name="ResourceImage" type="TextureRect" parent="."]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 75 )
expand = true
stretch_mode = 6

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ResourceNameLabel" type="Label" parent="."]
margin_top = 97.0
margin_right = 170.0
margin_bottom = 111.0
align = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
z_index = 1
texture = ExtResource( 1 )

[node name="GraphNode" type="Node" parent="."]

[node name="HustleGraphNode" parent="GraphNode" instance=ExtResource( 3 )]
visible = false

[connection signal="gui_input" from="." to="." method="_on_ResourceCard_gui_input"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_ClickTimer_timeout"]
